ingress/helloworld-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
spec:
  selector:
    matchLabels:
      run: helloworld-v1
  replicas: 2
  template:
    metadata:
      labels:
        run: helloworld-v1
    spec:
      containers:
      - name: helloworld-v1
        image: mailfigo/hello-world-njs:1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
  labels:
    run: helloworld-v1
spec:
  ports:
  - port: 80
  selector:
    run: helloworld-v1
