ingress/helloworld-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
spec:
  selector:
    matchLabels:
      run: helloworld-v2
  replicas: 2
  template:
    metadata:
      labels:
        run: helloworld-v2
    spec:
      containers:
      - name: helloworld-v2
        image: mailfigo/hello-world-njs:2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
  labels:
    run: helloworld-v2
spec:
  ports:
  - port: 80
  selector:
    run: helloworld-v2
