ingress/ingress_demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: helloworld-v1
          servicePort: 80
      - path: /v2
        backend:
          serviceName: helloworld-v2
          servicePort: 80
